# spacerobotics

./: README.md
GP/: GP(non_stationary).ipynb  GP(stationary).ipynb  NS_template.ipynb  app.py  path.py
GP/.ipynb_checkpoints/: GP-checkpoint.ipynb
GP/SFR/: sfr.aux  sfr.fdb_latexmk  sfr.fls  sfr.tex
GP/data/: dec17.csv  dec6.csv  jan31.csv  oct3.csv  sep19.csv
GP/doc/: math.fdb_latexmk  math.fls  math.tex
GP/docs/math/time math/: temporal.aux  temporal.fdb_latexmk  temporal.fls  temporal.out  temporal.tex
assignments/assignment_1/lawny_ws/: README.md
assignments/assignment_1/lawny_ws/install/: local_setup.sh  setup.sh
assignments/assignment_1/lawny_ws/install/control/lib/control/: exp.py  exp1.py  parameter_tuning.py
assignments/assignment_1/lawny_ws/install/control/share/control/: local_setup.dsv  local_setup.sh  package.sh
assignments/assignment_1/lawny_ws/install/first_order_boustrophedon_navigator/share/first_order_boustrophedon_navigator/: package.sh
assignments/assignment_1/lawny_ws/log/: latest_build
assignments/assignment_1/lawny_ws/src/control/: CMakeLists.txt
assignments/assignment_1/lawny_ws/src/control/launch/: controller_launch.xml
assignments/assignment_1/lawny_ws/src/control/scripts/: controller.py
assignments/assignment_2/RL/: RL_cartip.ipynb
assignments/assignment_2/cartip_ws/install/: local_setup.sh  setup.sh
assignments/assignment_2/cartip_ws/install/cart_pole_optimal_control/lib/cart_pole_optimal_control/: bryson_graph  bryson_lqr_controller  bryson_multipliers  dqn_cartpole  earthquake_force_generator  force_visualizer  gym  lqr_controller  performance_monitor  reset_time_publisher  ros_control_env  state_republisher
assignments/assignment_2/cartip_ws/install/cart_pole_optimal_control/share/cart_pole_optimal_control/: package.dsv  package.ps1  package.sh
assignments/assignment_2/cartip_ws/install/ralpoley/lib/ralpoley/: gym  gymmie  ralpoley
assignments/assignment_2/cartip_ws/log/: latest_build
assignments/assignment_2/cartip_ws/src/cart_pole_optimal_control/: README.md  package.xml  setup.py
assignments/assignment_2/cartip_ws/src/cart_pole_optimal_control/cart_pole_optimal_control/: bryson_lqr_controller.py  bryson_multipliers.py  dqn_cartpole.py
assignments/assignment_2/cartip_ws/src/cart_pole_optimal_control/config/: hyper.yaml
assignments/assignment_2/cartip_ws/src/cart_pole_optimal_control/launch/: bryson_graph.launch.py  cart_pole_rviz.launch.py
assignments/assignment_2/cartip_ws/src/ralpoley/: package.xml  setup.cfg  setup.py
assignments/assignment_2/cartip_ws/src/ralpoley/ralpoley/: gym1.py
assignments/assignment_3/rockytimes_ws/: README.md
assignments/assignment_3/rockytimes_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
assignments/assignment_3/rockytimes_ws/log/: latest_build
assignments/assignment_3/rockytimes_ws/src/mission/: CMakeLists.txt
assignments/assignment_3/rockytimes_ws/src/mission/scripts/: estimate.py  fast.xml  landing.py  mission.py
assignments/assignment_3/rockytimes_ws/src/terrain_mapping_drone_control/: setup.py
assignments/assignment_3/rockytimes_ws/src/terrain_mapping_drone_control/launch/: cylinder_landing.launch.py  mission.launch.py
assignments/assignment_4/: README.md
project/GP/: GP(matern-only).ipynb  stationary.ipynb
project/GP/data/: dec17.csv  dec6.csv  feb15.csv  jan31.csv  oct3.csv  tempE.csv
project/GP/doc/: math.fdb_latexmk  math.fls  math.tex
(+195 files in other folders)
