<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ralpoley</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="blazar@todo.todo">blazar</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>gymnasium</exec_depend>
  <exec_depend>gymnasium-robotics</exec_depend>
  <exec_depend>gymnasium-envs</exec_depend>
  <exec_depend>gymnasium-extra</exec_depend>
  <exec_depend>gymnasium-utils</exec_depend>
  <exec_depend>gymnasium-wrappers</exec_depend>
  <exec_depend>gymnasium-tests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
